@@ -70,8 +70,8 @@ a.about_data.quality	{border-left:1px solid #000; text-align:right; padding-righ
 /*	Blog styles
 	============================================= */
 .blog_head			{width:960px; margin:0 auto; color:#000; line-height:1.7em; font-size:4.0em; padding-top:20px; border-bottom:10px solid #000;}
-a.blog_head			{display:block; width:820px; margin:0 auto; color:#000; line-height:1.7em; font-size:4.0em; padding-top:20px; border-bottom:10px solid #000;}
-.blog_wrap			{padding:40px 60px; color:#000; font-size:1.0em; line-height:1.4em; border-bottom:1px solid #000; margin:auto; margin-top:40px; margin-bottom:40px;}
+a.blog_head			{display:block; width:960px; margin:0 auto; color:#000; line-height:1.7em; font-size:4.0em; padding-top:20px; border-bottom:10px solid #000;}
+.blog_wrap			{padding:40px 60px; color:#000; font-size:1.0em; line-height:1.4em; border-bottom:1px solid #000; width:800px; margin:auto; margin-top:40px; margin-bottom:40px;}
 .blog_date			{font-size:0.9em; line-height:1.2em; color:#000;}
 .blog_body			{padding:20px 0;}
 .blog_body p		{margin:1em 0; padding:0; color:inherit;}
