@@ -72,7 +72,7 @@ a.about_data.quality	{border-left:1px solid #CCC; text-align:right; padding-righ
 	============================================= */
 .blog_head			{width:960px; margin:0 auto; color:#FFF; line-height:1.7em; font-size:4.0em; padding-top:20px; border-bottom:10px solid #FFF;}
 a.blog_head			{display:block; width:960px; margin:0 auto; color:#FFF; line-height:1.7em; font-size:4.0em; padding-top:20px; border-bottom:10px solid #FFF;}
-.blog_wrap			{padding:40px 60px; color:#FFF; font-size:1.0em; line-height:1.4em; border-bottom:1px solid #FFF; background-color:rgba(255,255,255,0.1); width:700px; margin:auto; margin-top:40px; margin-bottom:40px;}
+.blog_wrap			{padding:40px 60px; color:#FFF; font-size:1.0em; line-height:1.4em; border-bottom:1px solid #FFF; background-color:rgba(255,255,255,0.1); width:800px; margin:auto; margin-top:40px; margin-bottom:40px;}
 .blog_date			{font-size:0.9em; line-height:1.2em; color:#CCC;}
 .blog_body			{padding:20px 0;}
 .blog_body p		{margin:1em 0; padding:0; color:inherit;}
