@@ -1,0 +1,55 @@
+#blog_title trim=ends
+
+Interactive IATI data – d-portal generator
+
+#blog_body form=markdown
+
+The <a href="http://www.d-portal.org/ctrack.html?#view=generator">generator</a> is a new d-portal feature that allows users to select subsets of <a href="http://www.aidtransparency.net/">International Aid Transparency Initiative</a> (IATI) information from the d-portal website and embed them into their own websites and blogs.
+
+<h3><strong>What is d-portal?</strong></h3>
+
+<a href="http://d-portal.org/">d-portal</a> is a platform that makes all IATI data available and accessible for anyone to explore. We set it up with the aim of allowing people in developing countries to view IATI information from their own country’s perspective.
+Nearly 300 organisations currently publish data on their activities to the <a href="http://www.iatiregistry.org/">IATI registry</a> - d-portal transforms this machine-readable data into information for humans to understand. It shows you all published IATI data from the point of view of a recipient country or a publisher, and gives you the chance to drill down to individual project detail. Users can see what data exists, who has published and who hasn’t yet, and where there are data quality issues.
+
+<h3><strong>What does the d-portal generator do?</strong></h3>
+
+There is a huge amount of interesting information within IATI (and therefore, d-portal) and significant value in being able to share bite-size pieces of it freely on other websites and blogs. The d-portal generator allows users to select specific information from d-portal and embed it directly into their own website code.
+
+<h3><strong>How do you use the generator?</strong></h3>
+
+There are lots of combinations and possibilities of what to choose when selecting from the vast amount of data in d-portal, so we tried to make the process as simple as possible…
+
+<a href="http://devinit.org/wp-content/uploads/2014/11/Gen-front-page.jpg"><img class="alignnone size-full wp-image-5036" src="http://devinit.org/wp-content/uploads/2014/11/Gen-front-page.jpg" alt="Gen front page" width="977" height="549" /></a>
+
+
+<strong>1 – Choose a combination of Publisher(s) and Recipient(s) information you want to see</strong>
+
+<strong>2 – Select how you want to display it (a map, table, list, pie chart, etc)</strong>
+
+<strong>3 – Select a colour scheme and re-size the width if required</strong>
+
+
+Once you’ve completed steps 1 &amp; 2 (3 is optional), you’ll see some code appear automatically in the white box, and an example of your selected content below that box (as below). You then just need to copy the code and paste it into the code of your website or blog post, to embed the content you’ve generated.
+
+<a href="http://devinit.org/wp-content/uploads/2014/11/GAVI-screen.jpg"><img class="alignnone size-full wp-image-5085" src="http://devinit.org/wp-content/uploads/2014/11/GAVI-screen.jpg" alt="GAVI screen" width="750" height="592" /></a>
+
+
+Here’s the live example of the content which we've chosen, and embedded into this page:
+
+
+<iframe style="width: 750px; height: 275px;" src="http://www.d-portal.org/ctrack.html?country=KE&amp;publisher=47122&amp;#view=frame&amp;frame=publisher_sectors&amp;size=750" width="300" height="150" frameborder="0" scrolling="no"></iframe>
+
+Once you’ve embedded any content it will update automatically (overnight) as publishers’ data is updated in the IATI registry. When users click on the content they will be directed to the relevant page on d-portal so they can investigate further.
+
+<em>We have used the tool to embed a simple table about our IATI data </em><a href="http://devinit.org/about/open-data/"><em>here</em></a><em>. We have also created a page showing some more examples of what you can do with d-portal generator content <a href="http://devinit.org/interactive-iati-data-d-portal-generator/">here</a>.</em>
+
+<h3><strong>More about…</strong></h3>
+
+<strong>IATI data </strong>includes data from donor governments and multilaterals, NGOs, foundations and private sector companies. It is forward-looking (it contains 2015 data from many publishers), comparable and increasingly comprehensive.
+
+Both the d-portal and the d-portal generator are currently in beta. We’d love to hear your feedback, so please let us know if you use either d-portal or the generator, and tell us about your experience; <strong>please send comments, queries and feedback to</strong> <a href="mailto:queries@d-portal.org">queries@d-portal.org</a>, or <strong>raise issues</strong> on the <a href="https://github.com/devinit/D-Portal">d-portal GitHub</a>.
+
+<em>If you are interested in <strong>finding out more or part-funding d-portal</strong>, please contact </em><a href="mailto:queries@d-portal.org"><em>queries@d-portal.org</em></a>
+
+
+<a href="{tongue_root}ctrack.html#view=generator">Create IATI content with the d-portal Generator</a>
