@@ -1,3 +1,9 @@
+Static site (2014-11-28 shi)
+==============================
+New post - Generator
+Fixed max-width for images in news posts
+
+
 Static site (2014-11-14 shi)
 ==============================
 Added Beta alert and temp style changes
