@@ -2,6 +2,7 @@ Development Portal (2014-11-28 shi)
 ==============================
 Fix generator widths consistency in iframes
 Added new instructions to generator
+Edited CSS for news posts
 
 
 Development Portal (2014-11-27 shi)
